--- a/model/.gitignore
+++ b/model/.gitignore
@@ -205,3 +205,23 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Trained model weights/checkpoints (these are often very large files)
+*.h5
+*.pth
+*.pt
+*.onnx
+*.weights
+
+# Directories containing training checkpoints and results
+runs/
+checkpoints/
+logs/
+output/
+
+# Large, unprocessed or augmented datasets
+data/
+dataset/
+raw_data/
+sample-videos/
+sample-images/
