--- a/esp32cam/platformio.ini
+++ b/esp32cam/platformio.ini
@@ -14,3 +14,4 @@ board = esp32cam
 framework = arduino
 upload_speed = 115200
 monitor_speed = 115200
+lib_deps = gilmaimon/ArduinoWebsockets @ ^0.5.3
