--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_launcher_icons: ^0.14.4
   http: ^1.6.0
+  socket_io_client: ^3.1.3
 
 flutter_launcher_icons:
   android: "launcher_icon"
