--- a/model/requirements.txt
+++ b/model/requirements.txt
@@ -1,5 +1,7 @@
+bidict==0.23.1
 certifi==2025.10.5
 charset-normalizer==3.4.4
+click==8.1.8
 colorama==0.4.6
 coloredlogs==15.0.1
 contourpy==1.3.3
@@ -9,6 +11,8 @@ filelock==3.20.0
 flatbuffers==25.9.23
 fonttools==4.60.1
 fsspec==2025.9.0
+gTTS==2.5.4
+h11==0.16.0
 humanfriendly==10.0
 idna==3.11
 Jinja2==3.1.6
@@ -37,12 +41,15 @@ psutil==7.1.2
 pyparsing==3.2.5
 pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
+python-engineio==4.12.3
+python-socketio==5.15.0
 pytz==2025.2
 PyYAML==6.0.3
 requests==2.32.5
 scipy==1.16.3
 seaborn==0.13.2
 setuptools==80.9.0
+simple-websocket==1.1.0
 six==1.17.0
 sympy==1.14.0
 threadpoolctl==3.6.0
@@ -54,4 +61,6 @@ tzdata==2025.2
 ultralytics==8.3.228
 ultralytics-thop==2.0.18
 urllib3==2.5.0
+websocket-client==1.9.0
+wsproto==1.3.2
 xlrd==2.0.2
