--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   http: ^1.6.0
   socket_io_client: ^3.1.3
+  audioplayers: ^6.5.1
 
 flutter_launcher_icons:
   android: "launcher_icon"
