--- a/hardware/platformio.ini
+++ b/hardware/platformio.ini
@@ -14,4 +14,4 @@ board = esp32cam
 framework = arduino
 upload_speed = 115200
 monitor_speed = 115200
-lib_deps = gilmaimon/ArduinoWebsockets @ ^0.5.3
+lib_deps = bblanchon/ArduinoJson@^7.0.0
